[package]
name = "healthchecker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.14"
serde = { version = "1.0.153", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }
warp = "0.3.3"
