[package]
name = "healthchecker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.11"
hickory-server = "0.24.0"
reqwest = "0.11.14"
serde = { version = "1.0.153", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.26.0", features = ["full"] }
