[package]
name = "healthchecker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.11"
env_logger = "0.10.1"
log = "0.4.20"
rand = "0.8.5"
reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls"]}
serde = { version = "1.0.153", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.26.0", features = ["full"] }
